# IDADiffCalculator-NG

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindIDA.cmake
